<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tom_pc.vypocetmzdy.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/String_HrubaMzda"
        android:textAlignment="textEnd"
        app:layout_constraintRight_toLeftOf="@+id/editTextHruba"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextHruba" />

    <EditText
        android:id="@+id/editTextHruba"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_castkavkc"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="124dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/StringČistámzda"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewVysledek"
        app:layout_constraintRight_toLeftOf="@+id/textViewVysledek" />

    <Button
        android:id="@+id/button_Vypocti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="Kliknuti_na_Vypocti"
        android:text="@string/Vypocti"
        app:layout_constraintLeft_toLeftOf="@+id/editTextHruba"
        app:layout_constraintTop_toBottomOf="@+id/editTextHruba" />

    <TextView
        android:id="@+id/textViewVysledek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/String_neznama"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_Vypocti"
        app:layout_constraintLeft_toLeftOf="@+id/button_Vypocti" />

</android.support.constraint.ConstraintLayout>
